# ra-data

./: .gitignore  Cargo.toml  README.md  d
data/registers/: agt_v1.yaml  gpio_v2.yaml  gpio_v3.yaml  icu_v1.yaml  icu_v2.yaml  icu_v3.yaml  icu_v4.yaml  icu_v5.yaml  iwdt_v1.yaml  mstp_v1.yaml  pfs_v1.yaml  rtc_v1.yaml  system_v3.yaml  system_v4.yaml  system_v5.yaml  tau_v1.yaml  timer_v3.yaml  timer_v4.yaml  timer_v5.yaml  tml32_v1.yaml  wdt_v1.yaml
data/registers/gpio/: gpio_v1.yaml
data/registers/icu/: icu_ra0e1.yaml  icu_ra0e2.yaml  icu_ra0l1.yaml  icu_ra2a1.yaml  icu_ra2a2.yaml  icu_ra2e1.yaml  icu_ra2e2.yaml  icu_ra2e3.yaml  icu_ra2l1.yaml  icu_ra2l2.yaml  icu_ra2t1.yaml  icu_ra4c1.yaml  icu_ra4e1.yaml  icu_ra4e2.yaml  icu_ra4l1.yaml  icu_ra4m1.yaml  icu_ra4m2.yaml  icu_ra4m3.yaml  icu_ra4t1.yaml  icu_ra4w1.yaml  icu_ra6e1.yaml  icu_ra6m1.yaml  icu_ra6m2.yaml  icu_ra6m5.yaml  icu_ra6t2.yaml  icu_ra6t3.yaml  icu_ra8d1.yaml  icu_ra8e1.yaml  icu_ra8m1.yaml  icu_ra8t1.yaml  icu_rka8d2.yaml  icu_rka8t2.yaml
data/registers/mstp/: mstp_v2.yaml  mstp_v3.yaml
data/registers/pfs/: pfs_common.yaml  pfs_v2.yaml
data/registers/port/: port_ra0e1.yaml  port_ra0e2.yaml  port_ra0l1.yaml  port_ra2a1.yaml  port_ra2a2.yaml  port_ra4m1.yaml  port_ra4w1.yaml  port_ra6t2.yaml  port_ra8d1.yaml  port_ra8e1.yaml  port_ra8m1.yaml  port_rka8.yaml  port_v1.yaml
ra-data-gen/: Cargo.toml
ra-data-gen/src/: generate.rs  interrupts.rs  main.rs  mstp.rs  perimap.rs  pinmapping.rs  rzone.rs  timer.rs  util.rs
ra-data-types/: Cargo.toml
ra-data-types/src/: lib.rs
ra-metapac-gen/: Cargo.toml
ra-metapac-gen/res/: Cargo.toml  build.rs  lib.rs  metadata.rs
ra-metapac-gen/src/: main.rs  registers.rs
scripts/: compare_mstp.py  compare_sram.py  compare_sram_functional.py  copy_sram_groups.py  find_common_sram_regs.py  fix_split_arrays.py  generate_generic_mstp.py  generate_sram_mapping.py  normalize_yaml.py  normalize_yaml_aggressive.py  remove_common_regs.py  sanitize_svd.py
transforms/: GPT.yaml  ICU.yaml  MSTP.yaml  PFS.yaml  PORT.yaml  RTC.yaml  SYSC.yaml  SYSTEM.yaml  TAU.yaml  TML32.yaml
(+44 files in other folders)
