[package]
name = "ra-metapac"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# `cargo publish` is unable to figure out which .rs files are needed due to the include! magic.
include = [
    "**/*.rs",
    "**/*.x",
    "Cargo.toml",
    "README.md",
]

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.3", optional = true }
critical-section = "1.1"
defmt = { version = "0.3.0", optional = true }
embassy-hal-internal = { path = "../../../embassy-leo/embassy-hal-internal", optional = true }
